--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+cargo-features = ["rename-dependency"]
+
 [package]
 authors = ["Jorge Aparicio <japaricious@gmail.com>"]
 name = "compiler_builtins"
@@ -5,6 +7,9 @@ version = "0.1.0"
 
 [lib]
 test = false
+
+[dependencies]
+core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
 
 [build-dependencies]
 cc = { optional = true, version = "1.0" }
@@ -31,6 +36,9 @@ mangled-names = []
 
 # Don't generate lang items for i128 intrisnics and such
 no-lang-items = []
+
+# Only used in the compiler's build system
+rustc-dep-of-std = ['c', 'compiler-builtins', 'core']
 
 [[example]]
 name = "intrinsics"
